--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     compile files('libs/picasso-2.5.2.jar')
 
 
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
-
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
