--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".ServiceActivity" />
         <activity android:name=".selectmenuActivity" />
         <activity android:name=".MerchantActivity" />
-        <activity android:name=".HubActivity"></activity>
+        <activity android:name=".HubActivity" />
+        <activity android:name=".OrderActivity"></activity>
     </application>
 
 </manifest>
