--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,6 @@
         <activity android:name=".OrderActivity" />
         <activity android:name=".CheckOrderActivity" />
         <activity android:name=".ReceiveActivity" />
-        <activity android:name=".orderMerchantActivity" />
         <activity android:name=".orderMerChantActivity" />
         <activity android:name=".addFoodActivity" />
         <activity android:name=".editPromotionActivity" />
@@ -37,7 +36,9 @@
         <activity android:name=".AddPromotionActivity" />
         <activity android:name=".UserActivity" />
         <activity android:name=".StatusActivity" />
-        <activity android:name=".OderSlipActivity"></activity>
+        <activity android:name=".OderSlipActivity" />
+        <activity android:name=".ShowNotification"/>
+        <receiver android:name=".MyReceiver" android:process=":remote"/>
     </application>
 
 </manifest>
