--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
@@ -45,7 +48,9 @@
             android:name=".MyReceiver"
             android:process=":remote" />
 
-        <activity android:name=".MerchantMainActivity"></activity>
+        <activity android:name=".MerchantMainActivity" />
+        <activity android:name=".EditFoodManageActivity" />
+        <activity android:name=".EditNewsActivity"></activity>
     </application>
 
 </manifest>
